--- a/Exercicis_per_a_realitzar_amb_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_per_a_realitzar_amb_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwpjeZg4vWdilWD4K7kdeT",
+      "authorship_tag": "ABX9TyM7sunQ3Bb4IW8RablqjycM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -639,18 +639,21 @@
     {
       "cell_type": "code",
       "source": [
-        "llibres = int(input(\"Quants llibres vols comprar? \"))\n",
-        "punts_de_llibre = int(input(\"Quants punts de llibre vols comprar? \"))\n",
-        "portallibres = int(input(\"Quants portallibres vols comprar? \"))\n",
-        "preu_final = llibres * 5 + punts_de_llibre * 1.5 + portallibres * 10\n",
+        "flag = True\n",
+        "while flag:\n",
+        "  llibres = int(input(\"Quants llibres vols comprar? \"))\n",
+        "  punts_de_llibre = int(input(\"Quants punts de llibre vols comprar? \"))\n",
+        "  portallibres = int(input(\"Quants portallibres vols comprar? \"))\n",
+        "  preu_final = llibres * 5 + punts_de_llibre * 1.5 + portallibres * 10\n",
         "\n",
-        "print(\"Quin tipus ets (preu final)?\")\n",
-        "print(f\"Soc {type(preu_final)}\")\n",
+        "  print(\"Quin tipus ets (preu final)?\")\n",
+        "  print(f\"Soc {type(preu_final)}\")\n",
         "\n",
-        "if isinstance(preu_final, int):\n",
-        "  print(float(preu_final))\n",
-        "else:\n",
-        "  print(preu_final)"
+        "  if isinstance(preu_final, int):\n",
+        "    print(f'El preu final ha sortit com a int (enter), torna a comprar de nou')\n",
+        "\n",
+        "\n",
+        "print(preu_final)"
       ],
       "metadata": {
         "id": "rqL50MHxuZ6K",
@@ -671,6 +674,120 @@
             "Quin tipus ets (preu final)?\n",
             "Soc <class 'float'>\n",
             "43.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calcular la superfície d'un quadrat sabent el seu costat"
+      ],
+      "metadata": {
+        "id": "RUez9Kd0peLw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "costat = float(input(\"Introdueix la longitud del costat del quadrat\"\n",
+        "            \"la qual vols calcular la seva superfície en\"\n",
+        "            \"metre: \"))\n",
+        "\n",
+        "print(f\"La superfície del quadrat és {costat ** 2} metres quadrat\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-DlPMEWHqyT2",
+        "outputId": "d9f76576-393d-414a-ed79-f24a509ea716"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introdueix la longitud del costat del quadratla qual vols calcular la seva superfície enmetre: 5\n",
+            "La superfície del quadrat és 25.0 metres quadrat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Realitzar el càlcul del perímetre d'un quadrat"
+      ],
+      "metadata": {
+        "id": "BOWpgvlPptLh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "costat = float(input(\"Introdueix la longitud del costat del quadrat\"\n",
+        "            \"la qual vols calcular la seva superfície en\"\n",
+        "            \"metre: \"))\n",
+        "\n",
+        "print(f\"El perímetre del quadrat és {costat * 4} metres al quadrat\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "65wPFIr0rhoe",
+        "outputId": "399eeadf-0a38-4f8b-b7bc-a5c7adb346ad"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introdueix la longitud del costat del quadratla qual vols calcular la seva superfície enmetre: 5\n",
+            "El perímetre del quadrat és 20.0 metres al quadrat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Inventar 4 variables i fer la suma de les 4, després multiplica la suma de la primera i la segona més la tercera i la quarta."
+      ],
+      "metadata": {
+        "id": "uzkCaE_Pp6Uj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "b = 2\n",
+        "c = 3\n",
+        "d = 4\n",
+        "\n",
+        "print(f'La suma de les 4 variables és: {a + b + c + d}')\n",
+        "print(f'El producte de la suma del primer par i segon par'\n",
+        "    f'és: {(a + b) * (c + d)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2B23NNNYsTeh",
+        "outputId": "24f1c932-3fe2-4e38-ad08-879f445e807e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma de les 4 variables és: 10\n",
+            "El producte de la suma del primer par i segon parés: 21\n"
           ]
         }
       ]
