--- a/Exercicis_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeD8gIQNxNsHm+VUEDiBtD",
+      "authorship_tag": "ABX9TyMchEaDiT4ly5AIpEienyh/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -791,6 +791,128 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calcula la mitjana de 4 variables."
+      ],
+      "metadata": {
+        "id": "nVeWu3DoR58k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = float(input('Introduiex el primer nombre: '))\n",
+        "b = float(input('Introduiex el segon nombre: '))\n",
+        "c = float(input('Introduiex el tercer nombre: '))\n",
+        "d = float(input('Introduiex el quart nombre: '))\n",
+        "\n",
+        "print(f'La mitjana de {a}, {b}, {c} i {d}: {(a + b + c + d) / 4}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R6efR0uXR8Wq",
+        "outputId": "f2a97b5a-5cfe-45c5-f703-6b839012fd15"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduiex el primer nombre: 2\n",
+            "Introduiex el segon nombre: 3\n",
+            "Introduiex el tercer nombre: 3\n",
+            "Introduiex el quart nombre: 4\n",
+            "La mitjana de 2.0, 3.0, 3.0 i 4.0: 3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fes una variable que pregunti el sou d'una persona, i si el seu sou és superior a 2000 euros, cal que mostri un missatge a la pantalla que digui que ha de pagar un 15% d'IRPF."
+      ],
+      "metadata": {
+        "id": "eroijmJeTE0N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sou = float(input('Introduiex el teu sou: '))\n",
+        "\n",
+        "if sou > 2000:\n",
+        "    print(f\"Has de pagar un 15% d'IRPF ({sou * 0.15}) euros\")\n"
+      ],
+      "metadata": {
+        "id": "GIOgTgIeV-0E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Posar dos 2 variables amb valors diferents i cal que surti a la pantalla el que sigui superior."
+      ],
+      "metadata": {
+        "id": "T2CTi0ioTqDY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = float(input('Introduiex el primer nombre: '))\n",
+        "b = float(input('Introduiex el segon nombre: '))\n",
+        "\n",
+        "print(f\"{max(a, b)} és el superior\")"
+      ],
+      "metadata": {
+        "id": "Uojd4hRpV_jT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imaginar que una persona té una nòmina de 2950 euros, cal pagar a l'estat un 20% d'impostos. Després, paga la factura del gas (70 euros) i de l'aigua (55 euros). També el pis (1000 euros) quants diners li quedarà per sobreviure? Si el resultat és menor de 1000 euros cal imprimir alguna cosa. Si és superior a 1000 euros, imprimir que ha tingut sort."
+      ],
+      "metadata": {
+        "id": "if1H6bwiT52l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diners = 2950\n",
+        "\n",
+        "diners -= diners * 0.2\n",
+        "print(f\"Queda {diners} euros després de pagar els impostos\")\n",
+        "diners -= 70\n",
+        "print(f\"Queda {diners} euros després de pagar la factura de gas\")\n",
+        "diners -= 55\n",
+        "print(f\"Queda {diners} euros després de pagar la factura d'aigua\")\n",
+        "diners -= 1000\n",
+        "print(f\"Queda {diners} euros després de pagar el preu del pis\")\n",
+        "if diners > 1000:\n",
+        "  print('Has tingut sort')\n",
+        "elif diners < 1000:\n",
+        "  print('Esforça més per guanyar més sou')\n",
+        "else:\n",
+        "  print('Numero rodons')"
+      ],
+      "metadata": {
+        "id": "ALDb4mQDW3Di"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
