--- a/Exercicis_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMchEaDiT4ly5AIpEienyh/",
+      "authorship_tag": "ABX9TyOOWC1mXg52BMrDclvwqd0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -818,7 +818,7 @@
         "id": "R6efR0uXR8Wq",
         "outputId": "f2a97b5a-5cfe-45c5-f703-6b839012fd15"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -871,13 +871,30 @@
         "a = float(input('Introduiex el primer nombre: '))\n",
         "b = float(input('Introduiex el segon nombre: '))\n",
         "\n",
-        "print(f\"{max(a, b)} és el superior\")"
+        "if a > b:\n",
+        "  print(f'{a} és el superior')\n",
+        "else:\n",
+        "  print(f'{b} és el superior')"
       ],
       "metadata": {
-        "id": "Uojd4hRpV_jT"
+        "id": "Uojd4hRpV_jT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2bc7304-0f69-4c68-93ed-0f7207fea4f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduiex el primer nombre: 4\n",
+            "Introduiex el segon nombre: 2\n",
+            "4.0 és superior que 2.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -909,10 +926,26 @@
         "  print('Numero rodons')"
       ],
       "metadata": {
-        "id": "ALDb4mQDW3Di"
+        "id": "ALDb4mQDW3Di",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de452287-6208-45fc-d572-b967a663702a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Queda 2360.0 euros després de pagar els impostos\n",
+            "Queda 2290.0 euros després de pagar la factura de gas\n",
+            "Queda 2235.0 euros després de pagar la factura d'aigua\n",
+            "Queda 1235.0 euros després de pagar el preu del pis\n",
+            "Has tingut sort\n"
+          ]
+        }
+      ]
     }
   ]
 }
