--- a/Exercicis_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOWC1mXg52BMrDclvwqd0C",
+      "authorship_tag": "ABX9TyOoTjibFOHgNoqIOA1fJzJM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,6 +946,106 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Li heu de demanar a un alumne que et doni 3 notes. Aleshores, calcular la mitjana de la nota. Si la mitjana de la nota és superior o igual que 7, supera el curs. Si és igual o més gran que 4 i més petit de 7, la nota no està malament. I si la mitjana és menor que 4, que s'esforci."
+      ],
+      "metadata": {
+        "id": "_Ae7L41muriK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = float(input('Introdueix la primera nota: '))\n",
+        "n2 = float(input('Introdueix la segona nota: '))\n",
+        "n3 = float(input('Introdueix la tercera nota: '))\n",
+        "\n",
+        "mitjana = (n1 + n2 + n3) / 3\n",
+        "\n",
+        "if mitjana >= 7:\n",
+        "  print('Has superat el curs')\n",
+        "elif mitjana >= 4:\n",
+        "  print('La nota no és malament')\n",
+        "else:\n",
+        "  print(\"Esforça't més\")"
+      ],
+      "metadata": {
+        "id": "wevPaMMQwKDN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Demanar 3 números i ens ha de mostrar el superior. Si pots,millor, una cadena amb ordres."
+      ],
+      "metadata": {
+        "id": "Pz_o7nrmvPTM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = float(input('Introdueix el primer nombre: '))\n",
+        "n1 = int(n1) if n1 % 1 == 0 else n1\n",
+        "n2 = float(input('Introdueix el segon nombre: '))\n",
+        "n2 = int(n2) if n2 % 1 == 0 else n2\n",
+        "n3 = float(input('Introdueix el tercer nombre: '))\n",
+        "n3 = int(n3) if n3 % 1 == 0 else n3\n",
+        "\n",
+        "print(f'El superior de las tres és {max(n1, n2, n3)}')\n",
+        "\n",
+        "l1 = [n1, n2, n3]\n",
+        "l2 = []\n",
+        "\n",
+        "l2.append(min(l1))\n",
+        "l1.remove(min(l1))\n",
+        "\n",
+        "if l1[0] < l1[1]:\n",
+        "    l2.append(l1[0])\n",
+        "    l2.append(l1[1])\n",
+        "else:\n",
+        "    l2.append(l1[1])\n",
+        "    l2.append(l1[0])\n",
+        "\n",
+        "print(f\"L'odre de petit a gran es: {l2[0]}, {l2[1]}, {l2[2]}\")\n"
+      ],
+      "metadata": {
+        "id": "06jmyNWYw2Sc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Demanar un número i imprimir si és positiu, negatiu o neutre."
+      ],
+      "metadata": {
+        "id": "g5ynskJuvh0h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = float(input('Introdueix un nombre: '))\n",
+        "\n",
+        "if n > 0:\n",
+        "  print('El nombre és positiu')\n",
+        "elif n < 0:\n",
+        "  print('El nombre és negatiu')\n",
+        "else:\n",
+        "  print('El nombre és neutre')"
+      ],
+      "metadata": {
+        "id": "qlWJYNw8x-ea"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
