--- a/TreballExtra“Avançat”Python.ipynb
+++ b/TreballExtra“Avançat”Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDaXDyZJGFNoItZVW58eug",
+      "authorship_tag": "ABX9TyNL+chpclH65g20vTCYCALp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,11 @@
         "    i = randint(1, 10)\n",
         "    if i < 10:\n",
         "        j = randint(0, 25)\n",
-        "        c += l1[j]\n",
+        "        m = randint(1, 2)\n",
+        "        if m == 1:\n",
+        "          c += l1[j]\n",
+        "        else:\n",
+        "          c += l1[j].upper()\n",
         "    else:\n",
         "        j = randint(0, 4)\n",
         "        c += l2[j]\n",
@@ -159,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8NmvkUtaryl3",
-        "outputId": "6b641723-dac3-4add-cb9a-f8e5c052d6df"
+        "outputId": "ac538ff9-6e99-4c71-be23-8c9457415d0a"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,8 +178,7 @@
             "- Incloure minuscula\n",
             "- incloure número\n",
             "- En oncasio d'haver signes especial, només poden ser: _!?,.\n",
-            "20\n",
-            "Contrasenya generada: _w,gawnrbxjlbwxqvza_\n"
+            "Contrasenya generada: _OatxHirT!qAh.O_A!Y_\n"
           ]
         }
       ]
@@ -216,7 +219,7 @@
         "id": "8UhFpboOtdGF",
         "outputId": "309494a3-1695-49a0-87e3-38014ee83906"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
