--- a/Exercicis_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoTjibFOHgNoqIOA1fJzJM",
+      "authorship_tag": "ABX9TyNkUw4d5xqEUJt2ap5Tz4yx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -883,7 +883,7 @@
         },
         "outputId": "b2bc7304-0f69-4c68-93ed-0f7207fea4f9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,6 +1043,100 @@
       ],
       "metadata": {
         "id": "qlWJYNw8x-ea"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preparació per al examen de dia 15 sobre llista"
+      ],
+      "metadata": {
+        "id": "OBjdFv5_Li8h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Una llista de llet, pa, peix, notela, 4, 15, cervesa\n",
+        "\"\"\"\n",
+        "\n",
+        "llista = ['llet', 'pa', 'peix', 'notela', 4, 15, 'cervesa']\n",
+        "\n",
+        "print('Els continguts de la llista són:')\n",
+        "for i in llista:\n",
+        "    print(i)\n",
+        "\n",
+        "print(f'El tercer element de la llista és: {llista[2]}')\n",
+        "\n",
+        "element_eliminat = llista.pop(3)\n",
+        "\n",
+        "print(\"Llista després d'haver tret el quart element:\")\n",
+        "print(llista)\n",
+        "\n",
+        "print(f'El tercer element de la llista és {llista[2]}')\n",
+        "\n",
+        "llista.append('bici')\n",
+        "llista.insert(0, 'chocolata')\n",
+        "\n",
+        "print(\"La llista després de haver afegit chocolata al inici de la llista i bici\"\n",
+        "      \"al final: \")\n",
+        "\n",
+        "print(llista)\n",
+        "\n",
+        "print(f'Ara mateix, la llista hi ha {len(llista)} elements')\n"
+      ],
+      "metadata": {
+        "id": "FyXP3zQiLnwp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Crearem una llista que es digui setmana, que tingui els dies de dilluns a divendres menys el dijous. Després afegirem el dissabte i el diumenge. I després posarem el dijous en el seu lloc. Un poc tinguem la setmana completa, afegim 2 divendres més a la llista. En una variable emmagatzemarem els cops que surten els divendres que hi ha a la llista. I després eliminarem els divendres que sobrin. I al final farem una frase que digui quants divendres hi havia abans d'eliminar-los."
+      ],
+      "metadata": {
+        "id": "6qjP2_BvMGu1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "llista = ['dilluns', 'dimarts', 'dimecres', 'divendres']\n",
+        "\n",
+        "llista.append('dissabte')\n",
+        "llista.append('diumenge')\n",
+        "\n",
+        "llista.insert(3, 'dijous')\n",
+        "print(llista)\n",
+        "\n",
+        "for i in range(2):\n",
+        "    llista.append('divendres')\n",
+        "\n",
+        "divendres = 0\n",
+        "\n",
+        "for i in llista:\n",
+        "    if i == 'divendres':\n",
+        "        divendres += 1\n",
+        "\n",
+        "divendres_abans_de_eliminar = 0\n",
+        "\n",
+        "for i in llista:\n",
+        "    if i == 'divendres':\n",
+        "        divendres_abans_de_eliminar += 1\n",
+        "\n",
+        "for i in range(2):\n",
+        "    llista.pop(len(llista) - 1)\n",
+        "\n",
+        "print(f'Havia {divendres_abans_de_eliminar} divendres abans de elimiinar els '\n",
+        "       'que sobraven')\n"
+      ],
+      "metadata": {
+        "id": "nZwY5o2GNfhL"
       },
       "execution_count": null,
       "outputs": []
