--- a/Exercicis_Python_Zhezheng_Jiang.ipynb
+++ b/Exercicis_Python_Zhezheng_Jiang.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkUw4d5xqEUJt2ap5Tz4yx",
+      "authorship_tag": "ABX9TyPY3ZIo7M03MF3bmzqGB/kD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1137,6 +1137,72 @@
       ],
       "metadata": {
         "id": "nZwY5o2GNfhL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Segona preparació per al examen de dia 15 sobre llista"
+      ],
+      "metadata": {
+        "id": "WsIp__HzrOxo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Fer el llistat següents: Roger, Lídia, Neus, Marc, Anna, Arnau, Héctor, Silvia.\n",
+        "Imprimir:\n",
+        "La persona es diu: Roger\n",
+        "La persona es diu: Lídia\n",
+        "La persona es diu: Neus\n",
+        "La persona es diu: Marc\n",
+        "...\n",
+        "\"\"\"\n",
+        "\n",
+        "l1 = ['Roger', 'Lídia', 'Neus', 'Mar', 'Anna', 'Arnau', 'Héctor', 'Silvia']\n",
+        "\n",
+        "for i in l1:\n",
+        "    print(f'La persona es diu: {i}')\n",
+        "\n",
+        "contrasenya = ''\n",
+        "for i in l1:\n",
+        "    contrasenya += i.upper()\n",
+        "\n",
+        "print(f'La contrasenya: {contrasenya}')\n",
+        "\n",
+        "A = 0\n",
+        "for i in contrasenya:\n",
+        "    if i == 'A':\n",
+        "        A += 1\n",
+        "\n",
+        "print(f'Hi ha en total {A} A en la contrasenya')\n",
+        "\n",
+        "accent = ['à', 'é', 'è', 'í', 'ó', 'ò', 'ú']\n",
+        "\n",
+        "accent_en_contrasenya = 0\n",
+        "\n",
+        "for i in contrasenya:\n",
+        "    if i.lower() in accent:\n",
+        "        accent_en_contrasenya += 1\n",
+        "\n",
+        "print(f'Hi ha {accent_en_contrasenya} accents')\n",
+        "\n",
+        "print(f'La llargada de la contrasenya és {len(contrasenya)}')\n",
+        "\n",
+        "l2 = ['gener', 'febrer', 'març', 'abril', 'maig', 'juny', 'juliol', 'agost',\n",
+        "      'setembre', 'octubre', 'novembre', 'desembre']\n",
+        "l3 = ['primer', 'segon', 'tercer', 'quart', 'cinquè', 'sisè', 'setè', 'vuitè',\n",
+        "      'novè', 'desè', 'undècim', 'duodècim', '', '', '']\n",
+        "\n",
+        "for i in range(12):\n",
+        "    print(f\"El {l3[i]} mes d'un any és {l2[i]}\")\n"
+      ],
+      "metadata": {
+        "id": "KFQSY4tZrRDf"
       },
       "execution_count": null,
       "outputs": []
